kubernetes-resources/simpleapp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: simpleapp
  namespace: prova
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: simpleapp
  sessionAffinity: None
  type: ClusterIP
