kubernetes-resources/challenge-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simpleapp 
  namespace: prova
spec:
  rules:
  - host: app.prova
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: simpleapp
              port:
                number: 8080
  - host: kibana.prova
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: kibana
              port:
                number: 8080
